--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "bcrypt": "^5.1.0",
       "apollo-server": "^3.12.0",
+      "cookie-parser": "^1.4.6",
       "dotenv": "^16.3.1",
+      "jsonwebtoken": "^9.0.0",
       "reflect-metadata": "^0.1.13",
       "sqlite3": "^5.1.6",
       "type-graphql": "^2.0.0-beta.2",
