--- a/package.json
+++ b/package.json
@@ -6,22 +6,27 @@
    "devDependencies": {
       "@types/node": "^16.11.10",
       "ts-node": "10.7.0",
-      "typescript": "4.5.2"
+      "typescript": "^5.1.6"
    },
    "dependencies": {
+      "@apollo/server": "^4.7.5",
       "bcrypt": "^5.1.0",
-      "apollo-server": "^3.12.0",
+      "body-parser": "^1.20.2",
+      "class-validator": "^0.14.0",
       "cookie-parser": "^1.4.6",
       "dotenv": "^16.3.1",
+      "express": "^4.18.2",
+      "http": "^0.0.1-security",
       "jsonwebtoken": "^9.0.0",
       "reflect-metadata": "^0.1.13",
       "sqlite3": "^5.1.6",
-      "type-graphql": "^2.0.0-beta.2",
+      "type-graphql": "^2.0.0-beta.1",
       "typeorm": "^0.3.17"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
-      "start2": "nodemon -w src --ext ts --exec ts-node src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "dev": "nodemon -w src --ext ts --exec ts-node src/index.ts",
+      "compile": "tsc",
+      "start2": "npm run compile && node ./dist/index.js"
    }
 }
