--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
    "type": "commonjs",
    "devDependencies": {
       "@types/node": "^16.11.10",
+      "@typescript-eslint/eslint-plugin": "^5.60.1",
+      "@typescript-eslint/parser": "^5.60.1",
+      "eslint": "^8.44.0",
       "ts-node": "10.7.0",
       "typescript": "^5.1.6"
    },
@@ -24,6 +27,7 @@
       "typeorm": "^0.3.17"
    },
    "scripts": {
-      "dev": "nodemon -w src --ext ts --exec ts-node src/index.ts"
+      "dev": "nodemon -w src --ext ts --exec \"npm run lint && ts-node src/index.ts\"",
+      "lint": "eslint . --ext .ts"
    }
 }
