--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
   "dependencies": {
     "@apollo/server": "^4.7.5",
     "@nestjs/apollo": "^12.0.7",
+    "@nestjs/cache-manager": "^2.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.0.7",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "@types/cache-manager": "^4.0.2",
     "bcrypt": "^5.1.0",
+    "cache-manager": "^5.2.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "graphql": "^16.7.1",
