--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt": "^5.1.0",
     "cache-manager": "^5.2.3",
     "cookie-parser": "^1.4.6",
+    "dataloader": "^2.2.2",
     "dotenv": "^16.3.1",
     "graphql": "^16.7.1",
     "jsonwebtoken": "^9.0.0",
