--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dataloader": "^2.2.2",
     "dotenv": "^16.3.1",
     "graphql": "^16.7.1",
+    "graphql-query-complexity": "^0.12.0",
     "jsonwebtoken": "^9.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
