--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/cache-manager": "^4.0.2",
     "bcrypt": "^5.1.0",
     "cache-manager": "^5.2.3",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "dataloader": "^2.2.2",
